[feat] updated rate limiting
